--- a/DistilBert_article_summary.ipynb
+++ b/DistilBert_article_summary.ipynb
@@ -126,7 +126,7 @@
    "id": "b6c35d87-1799-459b-9be7-7eec32aedd19",
    "metadata": {},
    "source": [
-    "### Then we implement the extractKeySentences(articleId: str) function to obtain the top 5 most important senetences for each article\n"
+    "### Then we implement the extractKeySentences(articleId: str) function to obtain the top 5 most important sentences for each article\n"
    ]
   },
   {
